# GJK

./: CMakeLists.txt  README.md  Transform.h  main.cpp  shader.h
shaders/: fs.glsl  vs-2d.glsl  vs-3d.glsl  vs-4d.glsl
src/: GJK.h  Polygon.h  Renderable.h  Transform.h
